k3s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
spec:
  rules:
    - host: k3s-david.sda-dev-projects.nl
      http:
        paths:
          - backend:
              serviceName: kubernetes-dashboard
              servicePort: 443
            path: /dashboard(/|$)(.*)
